# Akceleracja-oblicze-

./: CMakeLists.txt  README.md  main.cu  main2.cu
CPU/: .gitignore  CMakeLists.txt  avxAlignedVector.h  main.cpp  matrixMultiplication.cpp  matrixMultiplication.h  matrixOperations.cpp  matrixOperations.h
CPU/algorithms/: _helperFunctions.h  _simdMultiplicationFunctions.h  naiveMultiThreads.h  simd_singleThread.h  simd_threadPoolWithBatchingAndQueue.h  singleThread.h  threadPoolWithBatching.h  threadPoolWithBatchingAndQueue.h
GPU/UnifiedMemory/UnifiedMemory/: UnifiedMemory.vcxproj  kernel.cu
GPU/UnifiedMemory/UnifiedMemory/x64/Debug/: UnifiedMemory.exe.recipe  UnifiedMemory.ilk  kernel.cu-1187563032.deps  kernel.cu.cache
GPU/UnifiedMemory/UnifiedMemory/x64/Debug/UnifiedMemory.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  (+5 more)
GPU/UnifiedMemory/UnifiedMemory/x64/Release/: UnifiedMemory.exe.recipe  kernel.cu.cache
GPU/UnifiedMemory/x64/Debug/: UnifiedMemory.exp  UnifiedMemory.lib
GPU/UnifiedMemory/x64/Release/: UnifiedMemory.exp
GPU/cuBLAS/: cublasTraditional.cu
GPU/cuBLAS/UnifiedMemory/: UnifiedMemory.sln
GPU/cuBLAS/UnifiedMemory/UnifiedMemory/: kernel.cu
GPU/cuBLAS/UnifiedMemory/x64/Debug/: UnifiedMemory.exp
GPU/cuBLAS/cuBLASImplementation/: cuBLASImplementation.sln
GPU/cuBLAS/cuBLASImplementation/cuBLASImplementation/: cuBLASImplementation.vcxproj  kernel.cu
GPU/cuBLAS/cuBLASImplementation/x64/Debug/: cuBLASImplementation.exp
GPU/cuBLAS/cuBLASImplementation/x64/Release/: cuBLASImplementation.exp  cuBLASImplementation.lib
(+34 files in other folders)
